# epistle

./: .editorconfig  .gitignore  Cargo.toml  NOTICE  README.md  about.hbs  about.toml  deny.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  db.yml  dco.yml  e2e.yml  fuzz.yml  interop.yml  line-limit.yml  mutants.yml  release.yml  rust-audit.yml  supply-chain.yml
.sqlx/: query-110db36acf91995f763428d4f5f352dd0f473c92877d908397bbcb99a3162c55.json  query-233631a3ac0c6d2ab5280f5031ffa3c102b1f53b4763f2f862d651ce5658c541.json  query-443c7772f143a607ad323e24c3220d1886be2f855970a8b27327f61bd42efcc7.json  query-805e4c1bc95042ef2857129c093597f5304bf6c55886e650499bd8f654870fca.json  query-82efaf0890baec96c3b118233a35b0c3f2c0f8b2bf9fe3fed80d0703284f2149.json  query-93978c2ef515d1ca1e22e0b5ccf59b1f2f7086d9baa18b4a3622a4bca90ffb12.json  query-c50d19ccc7c039420b12469e3f534de6e842602a723f798b4812fbe44b5d01ec.json  query-dea90f5c7bfd8f607140e7be6b87ff0c78c154f390aaa87ed1c7d795a4573efd.json  query-ea61d0582e2f93f9260c53dbd68ffa921eddaf212536d1464989cd8597f78de0.json  query-ecb1e8f0c931aa958a0276818d060358dfe64973274ff000e1c1f82a28bc68f8.json  query-f1fa744a35c8923723b750e322d3dd72e7926b1275e3db0d3e7d93e6b4fcb4d9.json  query-f47d06590563ed3d902dc50d649769956018d58930f8d3a6d11f7215e9442024.json  query-fdb6a8b800682d1d11761149eaea6c69dd2eaffe20391419a6f5b854834f81b7.json
benches/: parsers.rs  queue.rs
contrib/: epistle.service
docs/: asvs.md  cli.md  configuration.md  dns.md  performance.md  security.md
examples/: profile.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: smtp_address.rs  smtp_command.rs  smtp_line.rs
migrations/: 0001_reputation.sql  0002_bayes.sql  0003_bayes_scope.sql  0004_directory.sql
scripts/: install.sh
src/: cidr.rs  cidr_tests.rs  lib.rs  main.rs  privdrop.rs  privdrop_tests.rs  sasl.rs  webhook.rs  webhook_tests.rs
src/acme/: client.rs  client_tests.rs  csr.rs  directory.rs  http01.rs  jws.rs  mod.rs  protocol.rs  renew.rs  tlsalpn.rs  tlsalpn_tests.rs  transport.rs
src/antispam/: arf.rs  bayes.rs  corpus.rs  corpus_tests.rs  greylist.rs  hook.rs  mod.rs  reputation.rs
src/api/: api_keys.rs  api_keys_tests.rs  api_tests.rs  error.rs  jmap.rs  jmap_tests.rs  jmap_tests_b.rs  jmap_tests_c.rs  mod.rs  state.rs  state_tests.rs
src/arc/: ams.rs  ams_tests.rs  chain.rs  chain_tests.rs  mod.rs  seal.rs  seal_tests.rs  sealer.rs  sealer_tests.rs  signature.rs  signature_tests.rs  validate.rs  validate_tests.rs
src/autodiscovery/: autodiscovery_tests.rs  mod.rs
src/cli/: accounts.rs  api_keys.rs  api_keys_tests.rs  app_passwords.rs  (+28 more)
tests/: database.rs  e2e.rs  interop.rs  ldap.rs
(+229 files in other folders)
