[package]
name = "mail"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Self-hosted, headless mail server: SMTP, IMAP and modern email security through an API and CLI."
repository = "https://github.com/Glyndor/mail"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"

[profile.release]
lto = "thin"
strip = "symbols"

[dev-dependencies]
tempfile = "3.27.0"
