[package]
name = "epistle"
version = "0.3.4"
edition = "2024"
license = "Apache-2.0"
description = "Self-hosted, headless mail server: SMTP, IMAP and modern email security through an API and CLI."
repository = "https://github.com/Glyndor/epistle"
publish = false

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
flate2 = "1.1.9"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
hickory-resolver = "0.26.1"
libc = "0.2.186"
psl = "2.1.212"
rcgen = "0.14.8"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
ring = "0.17.14"
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "macros", "migrate", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time", "signal"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tokio-rustls = "0.26.4"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.23.2", features = ["v7", "serde"] }
webpki-roots = "1.0.7"

[profile.release]
lto = "thin"
strip = "symbols"

[dev-dependencies]
criterion = "0.8.2"
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["test-util"] }
tower = { version = "0.5.3", features = ["util"] }

[[bench]]
name = "parsers"
harness = false
